code-examples/linkerd-authorization-policies/resources/httproute.yaml
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: http-route-for-nginx-port-80-bc98e3
  namespace: otterize-tutorial-linkerd
spec:
  parentRefs:
    - group: policy.linkerd.io
      kind: Server
      name: server-for-nginx-port-80
  rules:
    - matches:
        - path:
            type: PathPrefix
            # highlight-next-line
            value: /client-path
